--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
         };
         
         // JSON文件路径 - 根据您的实际路径修改
-        const WORDS_JSON_PATH = "/statics/info/words.json";
+        const WORDS_JSON_PATH = "../statics/info/words.json";
         
         // 初始化应用
         $(document).ready(function() {
