--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                             <option value="生产与设备">生产与设备</option>
                             <option value="质量体系与GMP">质量体系与GMP</option>
                             <option value="法规与注册">法规与注册</option>
-                            <option value="EHS与供应链">EHS与供应链</option>
+                            <option value="EHS与供应链">EHS与供应商</option>
                             <option value="综合管理">综合管理</option>
                         </select>
                     </div>
@@ -689,7 +689,7 @@
                         <button class="category-btn" data-category="生产与设备">生产设备</button>
                         <button class="category-btn" data-category="质量体系与GMP">质量体系</button>
                         <button class="category-btn" data-category="法规与注册">法规注册</button>
-                        <button class="category-btn" data-category="EHS与供应链">EHS供应链</button>
+                        <button class="category-btn" data-category="EHS与供应链">EHS供应商</button>
                         <button class="category-btn" data-category="综合管理">综合管理</button>
                     </div>
                     
