--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
                             <i class="fas fa-tag"></i> 分类
                         </label>
                         <select id="category-input" class="form-select">
-                            <option value="通用术语">常用词语</option>
+                            <option value="常用词语">常用词语</option>
                             <option value="研发与工艺">研发与工艺</option>
                             <option value="分析检测与质量控制">分析检测与质量控制</option>
                             <option value="设施与区域">设施与区域</option>
@@ -727,7 +727,7 @@
                     <!-- 分类筛选 -->
                     <div class="category-filter">
                         <button class="category-btn active" data-category="all">全部</button>
-                        <button class="category-btn" data-category="通用术语">常用词语</button>
+                        <button class="category-btn" data-category="常用词语">常用词语</button>
                         <button class="category-btn" data-category="研发与工艺">研发工艺</button>
                         <button class="category-btn" data-category="分析检测与质量控制">分析质控</button>
                         <button class="category-btn" data-category="设施与区域">设施区域</button>
