--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>隆莱英语学习助手</title>
+    <title>隆莱英语提升学习助手</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -663,7 +663,7 @@
         <header class="app-header">
             <div>
                 <div class="app-title">
-                    <i class="fas fa-language"></i> 隆莱英语助手
+                    <i class="fas fa-language"></i> 隆莱英语提升助手
                 </div>
                 <div class="app-subtitle">专业术语学习与练习</div>
             </div>
@@ -760,9 +760,9 @@
                             <div class="hint-title">
                                 <i class="fas fa-info-circle"></i> 管理说明
                             </div>
-                            <p>• <strong>更新系统术语</strong>: 更新预置术语，保留您的自定义术语</p>
-                            <p>• <strong>导出/导入</strong>: 备份或恢复您的自定义术语</p>
-                            <p>• <strong>清空系统术语</strong>: 只保留您添加的术语</p>
+                            <p>• <strong>更新系统术语</strong>: 更新预置术语，保留自定义术语</p>
+                            <p>• <strong>导出/导入</strong>: 备份或恢复自定义术语</p>
+                            <p>• <strong>清空系统术语</strong>: 只保留自己添加的术语</p>
                         </div>
                     </div>
                     
@@ -770,7 +770,7 @@
                         <div class="hint-title">
                             <i class="fas fa-lightbulb"></i> 提示
                         </div>
-                        <p>添加的术语会自动保存到本地，无需网络连接，数据不会丢失。</p>
+                        <p>添加的术语会自动保存到本地，只有自己可以看到，无需网络连接，数据不会丢失。</p>
                     </div>
                 </div>
             </div>
